Increase z-index of choices dropdown -- ensure choices dropdown sits over footer

--- a/app/webpacker/stylesheets/modules/choices_select.scss
+++ b/app/webpacker/stylesheets/modules/choices_select.scss
@@ -46,7 +46,7 @@
 }
 
 .choices__list--dropdown {
-	z-index: 3;
+	z-index: 20;
 }
 
 .stocks_controller.edit_page .choices.is-disabled .choices__item::after {
